--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
     <include src="./partials/search_form.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/load-more-btn.html"></include>
+    <include src="./partials/pagination.html"></include>
   </body>
 </html>
